# poot

./: .gitignore  Cargo.toml  LICENSE.md  readme.md
examples/: 01-01110011011101000110011001110101.rs  01-basic-bot.rs
src/: group.rs  lib.rs  serde.rs  subs.rs  user.rs
src/context/: connect_post.rs  create_chat.rs  create_post.rs  get_post.rs  me.rs  mod.rs
src/model/: chat.rs  client_user.rs  group.rs  id.rs  mod.rs  post.rs  role.rs  status.rs  user.rs
src/subscriptions/: general_update.rs  mod.rs
