[package]
name = "poot"
version = "0.1.0"
description="API wrapper for Photop."
edition = "2021"
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplesocket = { version = "0.1.0" }
tokio = { version = "1.16.1", features = ["full"] }
reqwest = "0.11.11"
async-trait = "0.1.56"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"